--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,21 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Object</title>
-</head>
-<body>
-    <h1>Add an Entry</h1>
-    <form action="/users/storage" method="POST">
-        <label for="name">Object Name</label>
-        <input type="text" name="name" id="name" placeholder="name">
-        <label for="quantity">Quantity</label>
-        <input type="number" name="quantity" id="quantity" placeholder="quantity">
-        <label for="price">Price</label>
-        <input type="number" name="price" id="price" placeholder="Price">
-        <button type="submit">Submit the details</button>
-    </form>
-</body>
-</html>
+ 
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mb-3">
+        <i class="fas fa-product-plus"></i> Add a Product
+      </h1>
+      <%- include('./partials/messages'); %>
+      <form action="/users/storage" method="POST">
+        <div class="form-group">
+          <label for="name">Product Name</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            class="form-control"
+            placeholder="Enter Product Name"
+            value="<%= typeof name != 'undefined' ? name : '' %>"
+          />
+        </div>
+        <div class="form-group">
+          <label for="quantity">Inventory level</label>
+          <input
+            type="number"
+            id="quantity"
+            name="quantity"
+            class="form-control"
+            placeholder="Enter Inventory level"
+            value="<%= typeof quantity != 'undefined' ? quantity : '' %>"
+          />
+        </div>
+        <div class="form-group">
+          <label for="price">Price</label>
+          <input
+            type="number"
+            id="price"
+            name="price"
+            class="form-control"
+            placeholder="Enter Price"
+            value="<%= typeof price != 'undefined' ? price : '' %>"
+          />
+        </div>
+              <button type="submit" class="btn btn-primary btn-block">
+          Add Product
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
+
