--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/578adac7be.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href = "https://bootswatch.com/4/lux/bootstrap.min.css">
     
-    <title>Hotel Management System</title>
+    <title>Inventory Management System</title>
 </head>
 <body>
     <div>
