changed quantity placeholder

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -24,7 +24,7 @@
               id="quantity"
               name="quantity"
               class="form-control"
-              placeholder="Enter Inventory level"
+              placeholder="Enter Quantity"
               value="<%= typeof quantity != 'undefined' ? quantity : '' %>"
               required
             />
