--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,13 +5,13 @@
         <%- include('./partials/messages'); %>
         <form action="/users/login" method="POST">
           <div class="form-group">
-            <label for="EId">Employee ID</label>
+            <label for="EId">User ID</label>
             <input
               type="EId"
               id="EId"
               name="EId"
               class="form-control"
-              placeholder="Enter Employee ID"
+              placeholder="Enter User ID"
             />
           </div>
           <div class="form-group">
