--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
         <p class="lead mt-4">
-          <a>For any error contact : 9876543210</a>
+          <a>For any error, please contact : 9876543210</a>
         </p>
       </div>
     </div>
