--- a/views/new.ejs
+++ b/views/new.ejs
@@ -44,6 +44,12 @@
                 <button type="submit" class="btn btn-primary btn-block">
             Add Product
           </button>
+          <br>
+          <button class="btn btn-primary btn-block"> <a href="/users/storage" ></a>
+            View all Products
+          </button>
+         
+
         </form>
       </div>
     </div>
