--- a/views/storage.ejs
+++ b/views/storage.ejs
@@ -36,7 +36,9 @@
     <title>Document</title>
 </head>
 <body >
-
+  <br> 
+<h2>All Products</h2>
+<br>
 
         <!-- Table of Contents -->
         <table id="customers">
@@ -45,7 +47,7 @@
                   <th>Name</th>
                   <th>Quantity</th>
                   <th>Price</th>
-                  <th>Delete</th>
+                  <th>Action</th>
               </tr>
           </thead>
           <tbody>
