--- a/views/storage.ejs
+++ b/views/storage.ejs
@@ -28,6 +28,8 @@
         overflow-x: hidden;
         text-align: center;
         font-size: 20px;
+        padding-left: 50px;
+        padding-right: 50px;
       }
     </style>
     <meta charset="UTF-8">
