--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,7 @@
         <h1 class="text-center mb-3">
           <i class="fas fa-product-plus"></i> Add a Product
         </h1>
-        <form action="/users/storage" method="POST"> 
+        <form action="/users/<%=obj._id%>?_method=PUT" method="POST">
           <div class="form-group">
             <label for="name">Product Name</label>
             <input
@@ -13,8 +13,9 @@
               name="name"
               class="form-control"
               placeholder="Enter Product Name"
-              value="<%= typeof name != 'undefined' ? name : '' %>"
+              value="<%= obj.name %>"
               required
+
             />
           </div>
           <div class="form-group">
@@ -25,7 +26,7 @@
               name="quantity"
               class="form-control"
               placeholder="Enter Quantity"
-              value="<%= typeof quantity != 'undefined' ? quantity : '' %>"
+              value="<%=obj.quantity %>"
               required
             />
           </div>
@@ -37,7 +38,7 @@
               name="price"
               class="form-control"
               placeholder="Enter Price"
-              value="<%= typeof price != 'undefined' ? price : '' %>"
+              value="<%= obj.price %>"
               required
             />
           </div>
