--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
     <div class="col-md-6 m-auto">
       <div class="card card-body">
         <h1 class="text-center mb-3">
-          <i class="fas fa-product-plus"></i> Add a Product
+          <i class="fas fa-product-plus"></i> Edit Product Details
         </h1>
         <form action="/users/<%=obj._id%>?_method=PUT" method="POST">
           <div class="form-group">
@@ -43,7 +43,7 @@
             />
           </div>
                 <button type="submit" class="btn btn-primary btn-block">
-            Add Product
+            Edit Details
           </button>
         </form>
       </div>
