--- a/views/storage.ejs
+++ b/views/storage.ejs
@@ -49,7 +49,8 @@
                   <th>Name</th>
                   <th>Quantity</th>
                   <th>Price</th>
-                  <th>Action</th>
+                  <th>Edit</th>
+                  <th>Delete</th>
               </tr>
           </thead>
           <tbody>
@@ -60,6 +61,7 @@
               <td><%=obj.name%></td>
               <td><%=obj.quantity%></td>
               <td>Rs. <%=obj.price%> </td>
+              <td><form action="/users/<%=obj._id%>/edit" method="put"><button type="submit" class="btn btn-primary btn-block">Edit</button></form>   </td> 
               <td><form action="/users/<%=obj._id%>?_method=DELETE" method="post"><button type="submit" class="btn btn-primary btn-block">Delete</button></form>   </td> 
             </tr>
             <% } %>
