--- a/views/storage.ejs
+++ b/views/storage.ejs
@@ -68,7 +68,7 @@
           </tbody> 
         </table>
 <br>
-        <button > <a class="btn btn-primary btn-block" href="/users/new" >New Entry</a></button>
+        <button > <a class="btn btn-primary btn-block" href="/users/new" >Add New Product</a></button>
 
 </body>
 </html>
