--- a/views/storage.ejs
+++ b/views/storage.ejs
@@ -31,6 +31,19 @@
         padding-left: 50px;
         padding-right: 50px;
       }
+  .blackbtn{
+      border:none;
+      display:inline-block;
+      padding:8px 16px;
+      vertical-align:middle;
+      overflow:hidden;
+        text-decoration:none;
+        color:inherit;
+        background-color:inherit;
+        text-align:center;
+        cursor:pointer;
+        white-space:nowrap
+      }
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -68,7 +81,7 @@
           </tbody> 
         </table>
 <br>
-        <button > <a class="btn btn-primary btn-block" href="/users/new" >Add New Product</a></button>
+        <button class="blackbtn" > <a class="btn btn-primary btn-block" href="/users/new" >Add New Product</a></button>
 
 </body>
 </html>
