--- a/views/storage.ejs
+++ b/views/storage.ejs
@@ -82,6 +82,10 @@
         </table>
 <br>
         <button class="blackbtn" > <a class="btn btn-primary btn-block" href="/users/new" >Add New Product</a></button>
+        <br>
+        <br>
+        <button class="blackbtn" > <a class="btn btn-primary btn-block" href="/users/logout" >Logout</a></button>
+
 
 </body>
 </html>
