Fixed a sneaky little mistake

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,11 @@
         <%- include('./partials/messages'); %>
         <form action="/users/login" method="POST">
           <div class="form-group">
-            <label for="EId">User ID</label>
+            <label for="UserId">User ID</label>
             <input
-              type="EId"
-              id="EId"
-              name="EId"
+              type="UserId"
+              id="UserId"
+              name="UserId"
               class="form-control"
               placeholder="Enter User ID"
             />
